Changes for 1.6.5

 - [ZBX-910] Queue/Details screen now has "Delayed at" column (Sasha)
 - [ZBX-910] Queue/Details screen now displays only 500 records (Sasha)
 - [ZBX-910] fixed incorrect values for proxy items in the Queue in case of time difference between server and the proxy (Sasha)
 - [ZBX-885] removed unused test code from Zabbix agent (Alexei)
 - [ZBX-887] fixed typo in "Not accessible resources" (Alexei)
 - [DEV-329] fixed server crash if PostgreSQL transaction fails (Sasha)
 - [ZBX-902] fixed wrongly updated operation in action in several circumstances (Artem)
 - [ZBX-779] removed PostgreSQL warning message "nonstandard use of ..." (Sasha)
 - [ZBX-901] fixed possible bug on trigger creation (Artem)
 - [ZBX-900] fixed adding several user to group with Oracle DB (Artem)
 - [ZBX-894] fixed processing of {HOSTNAME} for trigger name if the trigger expression consists of several items (Sasha)
 - [ZBX-894] fixed processing of {ITEM.NAME},{HOSTNAME},{IPADDRESS} and {TRIGGER.KEY} for alerts if the trigger expression consists of several items (Sasha)
 - [ZBX-897] fixed user groups rights adding for host groups (Vedmak)
 - [ZBX-896] improved performance of processing of IT services. Added database index (Sasha)
 - [DEV-137] fixed incorrect comment for TrapperTimeout option in zabbix_server.conf (Sasha)
 - [ZBX-894] fixed processing of {ITEM.LASTVALUE} for alerts if the trigger expression consists of several items (Sasha) 
 - [ZBX-893] fixed error creating trigger when in Host dropdown selected All (Vedmak)
 - [ZBX-888] more supported GSM modems (ignoring AT+CMEE command) (Sasha)
 - [ZBX-884] fixed sudden stop of Jabber notifications (Sasha)
 - [ZBX-884] added subject field for Jabber notifications (Sasha)
 - [ZBX-460] fixed processing `distclean' target of `Makefile' for zabbix_proxy (Dmitry)
 - [ZBX-882] fixed template linkage form (Artem)
 - [ZBX-879] fixed maximum 30 issues shown in Dahsboard system status (Vedmak)
 - [ZBX-876] removed unused files (Artem)